# agent-script

./: 404.html  DRAFT_PR_SUMMARY.md  MIGRATION_GUIDE.md  PR_DRAFT.md  README.md  SIMPLIFICATION_CHANGES.md  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md
.github/workflows/: deploy-docs.yml  release-schema.yml
assets/javascripts/: bundle.13a4f30d.min.js
assets/js/: feather.min.js
docs/mkdocs/: index.md
docs/mkdocs/examples/: index.md
docs/mkdocs/stylesheets/: extra.css
docs/mkdocs/user-guide/: conversion.md  installation.md  mcp-integration.md  rfc-simplify-spec.md  spec-anatomy.md  specifications.md
docs/overrides/: main.html
examples/: ai-engineer-simplified.json  ai-engineer-simplified.md  ai-engineer.json  ai-engineer.md  index.html
output/: mdast.json  schema.json
reference/agent_script_spec/: index.html
reference/agent_script_spec/generate/: index.html
reference/agent_script_spec/models/: index.html
reference/agent_script_spec/simplified_models/: index.html
reference/agent_script_tools/: index.html
reference/agent_script_tools/drivers/: index.html
reference/agent_script_tools/scripts/: index.html
reference/agent_script_tools/simplified_drivers/: index.html
search/: search_index.json
src/agent_script_tools/: drivers.py  scripts.py  simplified_drivers.py
tests/: test_models.py  test_simplified_models.py
user-guide/conversion/: index.html
user-guide/installation/: index.html
user-guide/mcp-integration/: index.html
user-guide/spec-anatomy/: index.html
user-guide/specifications/: index.html
